[tool.poetry]
name = "steganograpp"
version = "0.1.0"
description = ""
authors = ["chtholine <oleg123qwe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12,"
PyQt6 = "^6.6.1"
stegano = "^0.11.3"
pyinstaller = "6.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120  # defaults to 88 like black
target-version = "py311"
show-fixes = true

select = [
    "W",
    "E", # pycodestyle
    "F", # pyflakes
    "UP", # pyupgrade,
    "I", # isort
]

exclude = [
    "venv"
]